--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,12 +1,11 @@
-
-<div class="container">
-  <div class="row">
-    <div class="col-md-5">
-    {{> tasks/taskForm }}
-    </div>
-    <div class="col-md-7">
-      {{> tasks/taskTable }}
-    </div>
-  </div>
+<div class='container'>
+	<div class='row'>
+		<div class='col-md-5 mb-4'>
+			{{> products/productForm }}
+		</div>
+		<div class='col-md-7'>
+			{{> products/productTable }}
+		</div>
+	</div>
 
 </div>
