--- a/src/views/partials/products/productTable.hbs
+++ b/src/views/partials/products/productTable.hbs
@@ -1,4 +1,4 @@
-{{#if tasks}}
+{{#if products}}
 	<table
 		class='table table-bordered table-hover table-dark'
 	>
@@ -8,10 +8,16 @@
 					N.
 				</th>
 				<th>
+					Image
+				</th>
+				<th>
 					Title
 				</th>
 				<th>
 					Description
+				</th>
+				<th>
+					Price
 				</th>
 				<th>
 					Operations
@@ -20,39 +26,33 @@
 		</thead>
 		<tbody>
 
-			{{#each tasks}}
+			{{#each products}}
 				<tr>
 					<td>
 
 						{{@index}}
 					</td>
 					<td>
-
+						<img src="{{image}}" height="150px" alt="">
+					</td>
+					<td>
 						{{title}}
 					</td>
 					<td>
 						{{description}}
 					</td>
 					<td>
+						${{price}}
+					</td>
+					<td>
 
-						{{#if done}}
-							<a
-								class='btn btn-dark'
-								href='/task/{{_id}}/toggleDone'
-							>Undone</a>
-						{{else}}
-							<a
-								class='btn btn-success'
-								href='/task/{{_id}}/toggleDone'
-							>Done</a>
-						{{/if}}
 						<a
 							class='btn btn-danger'
-							href='/task/{{_id}}/delete'
+							href='/product/{{_id}}/delete'
 						>delete</a>
 						<a
 							class='btn btn-info'
-							href='/task/{{_id}}/edit'
+							href='/product/{{_id}}/edit'
 						>update</a>
 					</td>
 				</tr>
@@ -63,8 +63,8 @@
 {{else}}
 	<div class="h-100 d-flex align-items-center justify-content-center">
     <div class="text-center text-white">
-      <h1>No tasks</h1>
-      <img src="/icons/empty.svg" class="w-75" />
+      <h1>No products</h1>
+      <img src="https://img.icons8.com/color/96/000000/product--v1.png" class="w-75" />
     </div>
 
 {{/if}}
