product to projects

--- a/src/views/edit.hbs
+++ b/src/views/edit.hbs
@@ -6,10 +6,10 @@
 				class='card card-body bg-dark p-4 text-white rounded-0'
 			>
 				<h1>
-					Update A Product
+					Update A Project
 				</h1>
 				<form
-					action='/product/{{product._id}}/edit'
+					action='/project/{{project._id}}/edit'
 					method='post'
 					class='m-0'
 				>
@@ -20,18 +20,29 @@
 							name='title'
 							placeholder='Title'
 							id='title'
-							value='{{product.title}}'
+							value='{{project.title}}'
 							class='form-control rounded-0 bg-dark text-white'
 						/>
 					</div>
 					<div class='mb-3'>
 
 						<input
-							type='number'
-							name='price'
-							placeholder='Price'
-							id='price'
-							value='{{product.price}}'
+							type='url'
+							name='url'
+							id='url'
+							placeholder='URL'
+							value='{{project.url}}'
+							class='form-control rounded-0 bg-dark text-white'
+						/>
+					</div>
+					<div class='mb-3'>
+
+						<input
+							type='url'
+							name='url_repository'
+							id='url_repository'
+							placeholder='repository URL'
+							value='{{project.url_repository}}'
 							class='form-control rounded-0 bg-dark text-white'
 						/>
 					</div>
@@ -42,7 +53,7 @@
 							name='image'
 							id='imageUrl'
 							placeholder='image url'
-							value='{{product.image}}'
+							value='{{project.image}}'
 							class='form-control rounded-0 bg-dark text-white'
 						/>
 					</div>
@@ -54,7 +65,7 @@
 							cols='30'
 							rows='6'
 							class='form-control rounded-0 bg-dark text-white'
-						>{{product.description}}</textarea>
+						>{{project.description}}</textarea>
 					</div>
 					<div class='d-grid'>
 
