--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,10 +1,10 @@
 <div class='container'>
 	<div class='row'>
 		<div class='col-md-5 mb-4'>
-			{{> products/productForm }}
+			{{> projects/projectForm }}
 		</div>
 		<div class='col-md-7'>
-			{{> products/productTable }}
+			{{> projects/projectTable }}
 		</div>
 	</div>
 
