--- a/src/views/partials/navbar.hbs
+++ b/src/views/partials/navbar.hbs
@@ -1,5 +1,5 @@
 <nav class='navbar navbar-dark bg-dark mb-4'>
 	<div class='container'>
-		<a href='/' class='navbar-brand'>Product CRUD node</a>
+		<a href='/' class='navbar-brand'>Project CRUD node</a>
 	</div>
 </nav>
